<resources>
    <string name="app_name">Stryker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discover">Discover</string>
    <string name="wifi_scanner">WiFi scanner</string>
    <string name="local_scanner">Local scanner</string>
    <string name="web_scanner">Web scanner</string>
    <string name="router_scanner">Router scanner</string>
    <string name="nmap_scanner">NMAP scanner</string>
    <string name="exploit_db">Exploit DB</string>
    <string name="metasploit_framework">Metasploit framework</string>
    <string name="captive_portal_manager">Captive portal manager</string>
    <string name="exploit_manager">Exploit manager</string>
    <string name="report_manager">Report manager</string>
    <string name="environment_manager">Environment manager</string>
    <string name="administration">Administration</string>
    <string name="password_manager">Password manager</string>
    <string name="adapter_manager">Adapter manager</string>
    <string name="commands_manager">Commands manager</string>
    <string name="personalization">Personalization</string>
    <string name="account_settings">Account settings</string>
    <string name="statistic_viewer">Statistic viewer</string>
    <string name="app_settings">App settings</string>
    <string name="community">Community</string>
    <string name="log_viewer">Log manager</string>
    <string name="telegram_en">Telegram (EN)</string>
    <string name="official_website">Official website</string>
    <string name="latest_news">Latest news</string>
    <string name="official_wiki">Official wiki</string>
    <string name="script_manager">Scripts manager</string>
    <string name="rubber_ducky_manager">Rubber ducky manager</string>
    <string name="vulnerabilities">Vulnerabilities</string>
    <string name="handshake_manager">Handshakes manager</string>
    <string name="device_verification">Device verification</string>
    <string name="search_hint">Search for exploits, scanners, etc.</string>
    <string name="update_progress">Update progress</string>
    <string name="progress_desc">Here you can see the progress of the update. And how you can help us.</string>
    <string name="more_options">more options</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="error_copying_to_clipboard">Error copying to clipboard</string>
    <string name="cancel">Cancel</string>
    <string name="devices_deauth_attack">Devices deauth attack</string>
    <string name="handshake_capture_attack">Handshake capture attack</string>
    <string name="password_brute_attack">Password brute attack</string>
    <string name="own_pin_attack">Own pin attack</string>
    <string name="pin_brute_force_attack">Pin brute force attack</string>
    <string name="common_pins_attack">Common pins attack</string>
    <string name="pixie_dust_attack">Pixie dust attack</string>
    <string name="pixie_dust_description">The attacker leverages weaknesses in the WPS implementation, particularly in routers made by certain chip makers like Ralink, Realtek, and Broadcom. This approach allows the attacker to recover the WPS PIN and the Pre-Shared Keys (PSKs) associated with the network in a relatively short amount of time. This is significantly faster than a traditional brute force attack, which could take hours. Once the attacker has obtained the WPS PIN, they can gain access to the network and potentially to the passwords on wireless routers, thereby compromising network security</string>
    <string name="ok">OK</string>
    <string name="common_pins_desc">\nA specific type of WPS PIN attack targets wireless routers by checking a limited set of PINs, often around 30, which are determined based on the network\'s BSSID (Basic Service Set Identifier). This attack method is more sophisticated than a standard brute-force approach, as it relies on the correlation between the router\'s BSSID and known vulnerable WPS PINs.</string>
    <string name="brute_force_desc">This attack exploits a vulnerability in the WPS protocol, where the first four digits and the last four digits of the 8-digit PIN are validated separately. This reduces the number of attempts needed to guess the correct PIN significantly. Once the correct PIN is found, the attacker can connect to the network and potentially access sensitive information</string>
    <string name="own_pin_desc">This attack will try to connect to the network using a custom pin. You can set the pin before the attack</string>
    <string name="password_brute_desc">A password brute force attack involves systematically attempting every possible combination of characters until the correct password is found. This method relies on trial and error and can be time-consuming, especially for complex passwords with a mix of characters, numbers, and symbols. The effectiveness of such attacks diminishes significantly with longer and more complex passwords</string>
    <string name="hs_capture_desc">A handshake capture attack targets the initial communication between a device and a network. The attacker captures the \"handshake,\" which includes cryptographic data used to establish a secure connection. This data is then analyzed offline to crack the network\'s password, often exploiting weak passwords or vulnerabilities in the handshake protocol. It\'s commonly used against Wi-Fi networks with WPA/WPA2 security</string>
    <string name="devices_deauth_desc">A deauthentication (deauth) attack disrupts network communications by sending deauthentication frames from an attacker to a device, making it appear as if they come from the network. This forces the device to disconnect and re-authenticate. The attack is often used to capture the handshake in WPA/WPA2 secured networks or to create a denial-of-service condition. It\'s a common tactic in wireless network hacking due to its simplicity and effectiveness in temporarily disconnecting devices from a network</string>
    <string name="listen_on_interface">Listen on interface:</string>
    <string name="deauth_on_interface">Deauth on interface:</string>
    <string name="attack_on_interface">Attack on interface</string>
    <string name="attack_interface">Main interface:</string>
    <string name="save_list_of_networks">Save list of the networks</string>
    <string name="mass_deauth_attack">Mass deauth attack</string>
    <string name="mass_handshake_capture_attack">Mass handshake capture attack</string>
    <string name="mass_pixie_dust_attack">Mass pixie dust attack</string>
    <string name="wps">WPS</string>
    <string name="title_activity_install">InstallActivity</string>

    <string name="legal_disclaimer">Legal disclaimer</string>
    <string name="legality">By using our services, you agree to our Terms and Conditions and acknowledge our Privacy and Cookie Policy. This includes consent to data collection and usage as described in our policies. Please review these documents carefully.</string>
    <string name="i_have_read_and_agree">I have read and agree</string>
    <string name="privacy_policy_and_cookies">Privacy policy and Cookies</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="notification_channel_updater">File Downloading</string>
    <string name="need_root">Due android policy, this app requires root permissions</string>
    <string name="perm_required">Permissions required</string>
    <string name="grant">Grant</string>
    <string name="see_wiki">See wiki</string>
    <string name="all_seted_up">Everything is set!</string>
    <string name="relaunch_app">Relaunch app</string>
    <string name="setted_up_desc">Now you can use the app\'s features in a stunning UI along with proven tools. Feel free to read the wiki before using!</string>
    <string name="additional_files">Additional files</string>
    <string name="download_extra">App needs to download additional files in order to work properly</string>
    <string name="download">Download</string>
    <string name="next">Next</string>
    <string name="waiting_for_adapter">Waiting for adapter…</string>
    <string name="insert_adapter">Please insert the adapter into the phone port and wait for the connection to be established.</string>
    <string name="waiting">Waiting…</string>
    <string name="configure_your_adapter">Configure your adapter</string>
    <string name="command_for_enabling_monitor_mode">Command for enabling monitor mode</string>
    <string name="command_for_disabling_monitor_mode">Command for disabling monitor mode</string>
    <string name="check">Check</string>
    <string name="crash">Oops… That is not how we wanted to things happen. Bug report sent. Sorry :)</string>
    <string name="do_not_detach_the_adapter">Do NOT detach the adapter until the process is finished. You need to configure commands to the adapter below. Use \'$ifc\' to represent the interface name.</string>
    <string name="save_log">Save log</string>
    <string name="start_attack">Start attack</string>
    <string name="stop_attack">Stop attack</string>
    <string name="exit_attack">Close dialog</string>
    <string name="your_pin">Your pin (leave blank for NULL pin)</string>
    <string name="enter_pin">Enter pin:</string>
    <string name="enable_monitor_mode">Enable monitor mode</string>
    <string name="mtk_pixie_dust_support">MTK pixie dust support</string>
    <string name="hide_mac_address">Hide MAC addresses</string>
    <string name="error">Error:</string>
    <string name="hide_network_names">Hide network names</string>
</resources>