<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_wifi_scanner"
                    android:icon="@drawable/wifi"
                    android:title="@string/wifi_scanner" />
                <item
                    android:id="@+id/nav_local_scanner"
                    android:icon="@drawable/local"
                    android:title="@string/local_scanner" />
                <item
                    android:id="@+id/nav_web_scanner"
                    android:icon="@drawable/web"
                    android:title="@string/web_scanner" />
                <item
                    android:id="@+id/nav_router_scanner"
                    android:icon="@drawable/router"
                    android:title="@string/router_scanner" />
                <item
                    android:id="@+id/nav_nmap_scanner"
                    android:icon="@drawable/nmap"
                    android:title="@string/nmap_scanner" />



                <item
                    android:id="@+id/nav_exploit_db"
                    android:icon="@drawable/db"
                    android:title="@string/exploit_db" />
                <item
                    android:id="@+id/nav_exploit_manager"
                    android:icon="@drawable/exploit_manager"
                    android:title="@string/exploit_manager" />


    </group>


</menu>