<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:layout_marginTop="-80dp"
            android:layout_gravity="center"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/warn"/>
        <TextView
            android:id="@+id/slide_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/perm_required"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/slide_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/need_root"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/wiki"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/see_wiki"
                app:icon="@drawable/wiki"
                android:layout_marginEnd="10dp"
                app:cornerRadius="15dp"
                />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/grant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/grant"
            app:icon="@drawable/start_attack"
            app:iconGravity="textEnd"
            app:cornerRadius="15dp"
             />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>