<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:gravity="center"
        android:orientation="vertical">
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_anim"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_marginTop="-80dp"
        android:layout_gravity="center"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/box"/>
        <TextView
            android:id="@+id/slide_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/additional_files"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/slide_install_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:visibility="gone"
            app:trackCornerRadius="15dp" />

        <TextView
            android:id="@+id/slide_description"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/download_extra"
            android:textSize="18sp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/wiki"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/see_wiki"
            app:icon="@drawable/wiki"

            android:layout_marginEnd="10dp"
            app:cornerRadius="15dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:iconGravity="textEnd"
            android:text="@string/download"
            app:cornerRadius="15dp"
            app:icon="@drawable/download" />
    </LinearLayout>
    </LinearLayout>
