<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="360dp"
            android:layout_height="360dp"
            android:layout_marginTop="-80dp"
            android:layout_gravity="center"
            app:lottie_autoPlay="true"

            app:lottie_rawRes="@raw/done"/>

        <TextView

            android:id="@+id/slide_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-80dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/all_seted_up"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/setted_up_desc"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/relaunch_app"
            app:cornerRadius="15dp"
            app:icon="@drawable/refresh" />

    </LinearLayout>
