<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue2"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/warn" />

    <TextView
        android:id="@+id/warn_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/legal_disclaimer"
        android:textSize="26sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/legality"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/warn_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:strokeWidth="0dp" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/policy"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    app:tint="@color/blue1" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy_and_cookies"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"/>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/materialCardView"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:strokeWidth="0dp" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:src="@drawable/terms"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    app:tint="@color/blue1" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_and_conditions"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_margin="5dp"/>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
    <com.ncorti.slidetoact.SlideToActView
        android:id="@+id/example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="85dp"
        app:bounce_on_start="true"
        app:outer_color="@color/blue3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:text="@string/i_have_read_and_agree" />

</androidx.constraintlayout.widget.ConstraintLayout>