<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Main">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >

            <LinearLayout
                android:id="@+id/layout_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:scaleType="center"
                    android:scaleX="1.5"
                    android:scaleY="1.5"
                    app:lottie_rawRes="@raw/error"
                    android:id="@+id/anim_error"
                    />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/error"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    />
            </LinearLayout>

            <ImageView
                android:id="@+id/back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="11dp"
                android:src="@drawable/back"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/main_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_scanner"
                android:layout_marginStart="10dp"
                android:textSize="36sp"
                android:layout_marginTop="-5dp"
                app:layout_constraintStart_toEndOf="@id/back"
                app:layout_constraintTop_toTopOf="@id/back"
                app:layout_constraintBottom_toBottomOf="@id/back"
                />

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:layout_width="200dp"
                android:id="@+id/progress_bar"
                android:layout_height="wrap_content"
                app:trackCornerRadius="8dp"
                android:indeterminate="true"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/main_title"
                app:layout_constraintEnd_toEndOf="@+id/main_title"
                app:layout_constraintStart_toStartOf="@+id/main_title" />

            <ImageView
                android:id="@+id/refresh"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:padding="5dp"
                android:src="@drawable/refresh"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/main_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/main_title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/wifi_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="92dp"
                android:layoutAnimation="@anim/layout_anim"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_title" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/magic_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/more_options"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/more_options" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/wps_button"
                style="?attr/floatingActionButtonSmallStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:contentDescription="@string/more_options"
                android:focusable="true"
                android:layout_marginBottom="5dp"
                android:src="@drawable/nowps"

                app:layout_constraintBottom_toTopOf="@+id/magic_button"
                app:layout_constraintEnd_toEndOf="@+id/magic_button"
                app:layout_constraintStart_toStartOf="@+id/magic_button" />

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                > <FrameLayout
                android:id="@+id/standard_bottom_sheet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
                app:layout_constraintBottom_toBottomOf="parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottomsheet"
    android:orientation="vertical">
    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/drag_handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"

        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/pixie_dust"
        android:padding="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:src="@drawable/pixie"
            app:tint="@color/blue1" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/scanners_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mass_pixie_dust_attack"
            android:textSize="16sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/hs_capture"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:src="@drawable/hs_capture"
            app:tint="@color/blue1" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/nmap_scanners_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mass_handshake_capture_attack"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/deauth"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"

        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:src="@drawable/deauth"
            app:tint="@color/blue1" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/deauth_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mass_deauth_attack"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"

        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:src="@drawable/save"
            app:tint="@color/blue1" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/save_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_list_of_networks"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>

            </FrameLayout></androidx.coordinatorlayout.widget.CoordinatorLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>